--- a/pages/nino.html
+++ b/pages/nino.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
          <!--link a css-->
+         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 <link rel="stylesheet" href="../css/style.css">
     <title>Niños</title>
 </head>
@@ -11,23 +12,24 @@
 </head>
 <body>
     <header> 
-        <div class="head">
-    
-            <nav class="header__navbar">
-                <div class="logo">
-                    <a href="#"><img src="../assets/logo2.png" alt="logo2"></a>
-                </div>   
-
-                <ul class="navbar__ul">
-                    <li class="navbar__ul-li"><a href="../index.html">Home</a></li>
-                    <li class="navbar__ul-li"><a href="../pages/mujer.html">Mujer</a></li>
-                    <li class="navbar__ul-li"><a href="../pages/hombre.html">Hombre</a></li>
-                    <li class="navbar__ul-li"><a href="../pages/nino.html">Niño</a></li>
-                    <li class="navbar__ul-li"><a href="../pages/novedades.html">Novedades</a></li>
-                </ul>      
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a  href="#"><img class="logo--imagen" src="../assets/logo2.png" alt="logo2"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link" href="../index.html">Home</a> 
+                  <a class="nav-link" href="../pages/mujer.html">Mujer</a> 
+                  <a class="nav-link" href="../pages/hombre.html">Hombre</a>
+                  <a class="nav-link" href="../pages/nino.html">Niño</a>
+                  <a class="nav-link" href="../pages/novedades.html">Novedades</a>
                 
-            </nav>
-        </div>
+                </div>
+              </div>
+            </div>
+          </nav>
 
     </header>
 
@@ -63,5 +65,6 @@
     <footer>
         <p class="parrafo">2023 by Style Blue. Alto Style.com</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
