--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -51,6 +51,14 @@
             <img src="../assets/novedades/novedades4.webp" alt="">
             <img src="../assets/novedades/novedades5.jfif" alt="">
         </section>
+        <div class="container text-center">
+            <div class="row row-cols-2">
+              <div class="col">Atencion al Cliente</div>
+              <div class="col">Buscar una Tienda</div>
+              <div class="col">Preguntas Frecuentes</div>
+              <div class="col">Suscribete</div>
+            </div>
+          </div>
 
 </main>
     <section>
