--- a/pages/mujer.html
+++ b/pages/mujer.html
@@ -48,15 +48,31 @@
 
     <div class="div__mujer1">
         <img src="../assets/mujer/mujer4.jpg" alt="">
+        <p>Zapatillas Converse</p>
+        <p>$50,00</p>
         <img src="../assets/mujer/mujer5.jfif" alt="">
+        <p>Zapatillas Reebok</p>
+        <p>$45,00</p>
         <img src="../assets/mujer/mujer6.webp" alt="">
+        <p>Zapatillas Super Star</p>
+        <p>$75;00</p>
         <img src="../assets/mujer/mujer7.jpg" alt="">
+        <p>Zapatillas Nike Dunk</p>
+        <p>$80,00</p>
     </div>
           <div class="div__mujer2">
             <img src="../assets/mujer/mujer8.webp" alt="">
+            <p>Zapatillas Vans</p>
+            <p>$45,00</p>
             <img src="../assets/mujer/mujer9.webp" alt="">
+            <p>Zapatillas Stan Smith</p>
+            <p>$55,00</p>
             <img src="../assets/mujer/mujer10.webp" alt="">
+            <p>Zapatillas New Balance</p>
+            <p>$50,00</p>
             <img src="../assets/mujer/mujer11.webp" alt="">
+            <p>Zapatillas Lacoste</p>
+            <p>$70,00</p>
         </div>
             
         </section>
