--- a/pages/nino.html
+++ b/pages/nino.html
@@ -39,28 +39,43 @@
             <img src="../assets/niño/nino2.JPG" alt="zapatilla2">
             <img src="../assets/niño/nino3.JPG" alt="zapatilla3">
         </section>
-         <h1 class="h1__mujer">Niño</h1>
+         
 
         <section class="hombre__2">
             <div class="div__niño1">
             <img src="../assets/niño/nino4.jpg" alt="">
+            <p>Zapatillas Converse</p>
+            <p>$35,00</p>
             <img src="../assets/niño/nino5.jfif" alt="">
+            <p>Zapatillas Puma Rider</p>
+            <p>$40,00</p>
             <img src="../assets/niño/nino6.jpg" alt="">
+            <p>Zapatillas Infantil</p>
+            <p>$30,00</p>
             <img src="../assets/niño/nino7.webp" alt="">
+            <p>Zapatillas Puma Suede</p>
+            <p>$40,00</p>
         </div>
         
         <div class="div__niño2">
             <img src="../assets/niño/nino8.jpeg" alt="">
+            <p>Zapatillas Adidas</p>
+            <p>$44;00</p>
             <img src="../assets/niño/nino9.webp" alt="">
+            <p>Zapatillas Nike Blazer mid</p>
+            <p>$50,00</p>
             <img src="../assets/niño/nino10.jpg"alt="">
+            <P>Zapatillas New Balance</P>
+            <p>$48,00</p>
             <img src="../assets/niño/nino11.webp" alt="">
+            <p>Zapatillas Vans</p>
+            <p>$50,00</p>
        </div>
         </section>
 
         </div>
     </main>    
     <section>
-        <h1>Niños</h1>
     </section>
     <footer>
         <p class="parrafo">2023 by Style Blue. Alto Style.com</p>
