--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -43,13 +43,21 @@
         <img src="../assets/novedades/novedades1.JPG" alt="">
         </section>
 
-        <h1 class="h1__mujer">Novedades</h1>
+        
 
         <section id="section__novedades">
             <img src="../assets/novedades/novedades2.webp" alt="">
+            <P>Zapatillas Adidas Vintage</P>
+            <p>$90,00</p>
             <img src="../assets/novedades/novedades3.webp" alt="">
+            <p>Zapatillas Nike Blazer Mid</p>
+            <p>$100,00</p>
             <img src="../assets/novedades/novedades4.webp" alt="">
+            <p>Zapatillas Air Force One</p>
+            <p>$110,00</p>
             <img src="../assets/novedades/novedades5.jfif" alt="">
+            <p>Zapatillas Puma Suede Vintage</p>
+            <p>$100,00</p>
         </section>
         <div class="container text-center">
             <div class="row row-cols-2">
