tercera pre-entrega

--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -46,32 +46,48 @@
 
             <div class="div__hombre1">
             <img src="../assets/hombre/hombre4.webp" alt="">
+            <button>
             <p>Zapatillas Super Star</p>
             <p>$80,00</p>
+          </button>
             <img src="../assets/hombre/hombre5.jpg" alt="">
+            <button>
             <p>Zapatillas El Ganso</p>
             <p>$55,00</p>
+          </button>
             <img src="../assets/hombre/hombre6.webp" alt="">
+            <button>
             <p>Puma Suede</p>
             <p>$60,00</p>
+          </button>
             <img src="../assets/hombre/hombre7.jpg" alt="">
+            <button>
             <p>Nike Air Force</p>
             <p>$100</p>
+          </button>
         </div>
         
         <div class="div__hombre2">
             <img src="../assets/hombre/hombre8.jpg" alt="">
+            <button>
             <p>Zapatillas Reebok</p>
             <p>$60,00</p>
+          </button>
             <img src="../assets/hombre/hombre9.webp" alt="">
+            <button>
             <p>Zapatillas Jordan 1</p>
             <p>$110,00</p>
+          </button>
             <img src="../assets/hombre/hombre10.webp" alt="">
+            <button>
             <p>Zapatillas Kappa</p>
             <p>$65,00</p>
+          </button>
             <img src="../assets/hombre/hombre11.jpeg" alt="">
+            <button>
             <p>Zapatillas Adidas Yeezy</p>
             <p>$80,00</p>
+          </button>
        </div>
         </section>
 
