--- a/pages/nino.html
+++ b/pages/nino.html
@@ -44,32 +44,48 @@
         <section class="hombre__2">
             <div class="div__niño1">
             <img src="../assets/niño/nino4.jpg" alt="">
+            <button>
             <p>Zapatillas Converse</p>
             <p>$35,00</p>
+          </button>
             <img src="../assets/niño/nino5.jfif" alt="">
+            <button>
             <p>Zapatillas Puma Rider</p>
             <p>$40,00</p>
+          </button>
             <img src="../assets/niño/nino6.jpg" alt="">
+            <button>
             <p>Zapatillas Infantil</p>
             <p>$30,00</p>
+          </button>
             <img src="../assets/niño/nino7.webp" alt="">
+            <button>
             <p>Zapatillas Puma Suede</p>
             <p>$40,00</p>
+          </button>
         </div>
         
         <div class="div__niño2">
             <img src="../assets/niño/nino8.jpeg" alt="">
+            <button>
             <p>Zapatillas Adidas</p>
             <p>$44;00</p>
+          </button>
             <img src="../assets/niño/nino9.webp" alt="">
+            <button>
             <p>Zapatillas Nike Blazer mid</p>
             <p>$50,00</p>
+          </button>
             <img src="../assets/niño/nino10.jpg"alt="">
+            <button>
             <P>Zapatillas New Balance</P>
             <p>$48,00</p>
+          </button>
             <img src="../assets/niño/nino11.webp" alt="">
+            <button>
             <p>Zapatillas Vans</p>
             <p>$50,00</p>
+          </button>
        </div>
         </section>
 
