--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -47,17 +47,25 @@
 
         <section id="section__novedades">
             <img src="../assets/novedades/novedades2.webp" alt="">
+            <button>
             <P>Zapatillas Adidas Vintage</P>
             <p>$90,00</p>
+          </button>
             <img src="../assets/novedades/novedades3.webp" alt="">
+            <button>
             <p>Zapatillas Nike Blazer Mid</p>
             <p>$100,00</p>
+          </button>
             <img src="../assets/novedades/novedades4.webp" alt="">
+            <button>
             <p>Zapatillas Air Force One</p>
             <p>$110,00</p>
+          </button>
             <img src="../assets/novedades/novedades5.jfif" alt="">
+            <button>
             <p>Zapatillas Puma Suede Vintage</p>
             <p>$100,00</p>
+          </button>
         </section>
         <div class="container text-center">
             <div class="row row-cols-2">
