--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -17,7 +17,7 @@
     
     <header> 
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">bo
+            <div class="container-fluid">
                 <a  href="#"><img class="logo--imagen" src="../assets/logo2.png" alt="logo2"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
